--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_KERNEL_LZO=y
+CONFIG_KERNEL_XZ=y
 CONFIG_SYSVIPC=y
 # CONFIG_RCU_FAST_NO_HZ is not set
 # CONFIG_IKCONFIG is not set
@@ -9,6 +9,8 @@ CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_CPUACCT=y
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
 CONFIG_RESOURCE_COUNTERS=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
@@ -21,6 +23,7 @@ CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
+CONFIG_RD_LZ4=n
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
@@ -94,9 +97,14 @@ CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_PREEMPT=y
+CONFIG_HZ_300=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_COMPACTION=y
+CONFIG_CLEANCACHE=y
+CONFIG_ZCACHE=y
+CONFIG_ZSMALLOC=y
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_ENABLE_VMALLOC_SAVING=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_USE_OF=y
@@ -111,7 +119,6 @@ CONFIG_CPU_BOOST=y
 #Enable CPUFREQ LIMIT.
 CONFIG_CPU_FREQ_LIMIT=y
 CONFIG_CPU_FREQ_LIMIT_USERSPACE=y
-CONFIG_UID_CPUTIME=y
 
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
@@ -175,9 +182,9 @@ CONFIG_NETFILTER_TPROXY=y
 CONFIG_NETFILTER_XTABLES=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
+CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_LOG=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
-CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
@@ -255,13 +262,15 @@ CONFIG_RFKILL=y
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_CMA=y
-CONFIG_CMA_PINPAGE_MIGRATION=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_QSEECOM=y
 CONFIG_QPNP_MISC=y
 CONFIG_USB_HSIC_SMSC_HUB=y
 CONFIG_TI_DRV2667=y
+CONFIG_UID_CPUTIME=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
@@ -469,14 +478,12 @@ CONFIG_USB_STORAGE_ENE_UB6250=y
 CONFIG_USB_EHSET_TEST_FIXTURE=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG_FILES=y
-# Advanced Linux Sound Architecture
-CONFIG_SND_RAWMIDI=y
 CONFIG_USB_DWC3_MSM=y
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
 CONFIG_USB_ANDROID_SAMSUNG_SIDESYNC=y
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
-CONFIG_USB_ANDROID_SAMSUNG_MTP=y
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
 CONFIG_USB_DUN_SUPPORT=y
 CONFIG_MMC=y
 CONFIG_MMC_PERF_PROFILING=y
@@ -507,7 +514,7 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_LOGGER=y
+# CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -533,13 +540,16 @@ CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT4_FS=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_SDCARD_FS=y
 CONFIG_EXFAT_FS=y
-CONFIG_SCFS=y
-CONFIG_SCFS_LOWER_PAGECACHE_INVALIDATION=y
-CONFIG_CRYPTO_LZO=y
 CONFIG_TMPFS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
@@ -552,7 +562,7 @@ CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_MEMORY_INIT=y
-# CONFIG_DYNAMIC_DEBUG is not set
+CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_USER=y
 CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_DEBUG_SET_MODULE_RONX=y
@@ -608,10 +618,10 @@ CONFIG_SEC_LOGGER_BUFFER_EXPANSION=y
 CONFIG_SEC_SSR_DEBUG_LEVEL_CHK=y
 CONFIG_SEC_THERMISTOR=y
 
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
+# CONFIG_SEC_RESTRICT_ROOTING is not set
+# CONFIG_SEC_RESTRICT_SETUID is not set
+# CONFIG_SEC_RESTRICT_FORK is not set
+# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
 
 CONFIG_UID_STAT=y
 CONFIG_DEBUG_FS=y
@@ -622,26 +632,21 @@ CONFIG_MSM_AVTIMER=y
 
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 
+CONFIG_SEC_NET_FILTER=y
 CONFIG_OF_SUBCMDLINE_PARSE=y
 CONFIG_USER_RESET_DEBUG=y
 CONFIG_MIN_DIRTY_THRESH_PAGES=2560
 CONFIG_CRYPTO_GCM=y
 
-# KNOX SDP and DLP
-CONFIG_SDP=y
-CONFIG_DLP=y
+CONFIG_MUIC_SUPPORT_RUSTPROOF=y
 
-# SDCARD FS XATTR
-CONFIG_SDCARD_FS_XATTR=y
-CONFIG_ECRYPT_FS_VIRTUAL_FAT_XATTR=y
-CONFIG_FAT_VIRTUAL_XATTR=y
-CONFIG_EXFAT_VIRTUAL_XATTR=y
-CONFIG_FAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-CONFIG_SEC_SELINUX=y
+CONFIG_SDP=y
 
 #smart mgr kernel features
 CONFIG_SEC_SLOWPATH=y
 CONFIG_SEC_SMART_MGR_RUNQUEUE_AVG=y
 
-#TZ ICCC defines
-CONFIG_TZ_ICCC=y
+# CONFIG_V4L_USB_DRIVERS is not set
+# CONFIG_MSM_DMA_TEST is not set
+# CONFIG_MSM_ULTRASOUND_B is not set
+# CONFIG_MEDIA_TUNER is not set
