--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_KERNEL_XZ=y
+CONFIG_KERNEL_LZO=y
 CONFIG_SYSVIPC=y
 # CONFIG_RCU_FAST_NO_HZ is not set
 # CONFIG_IKCONFIG is not set
@@ -35,10 +35,6 @@ CONFIG_KPROBES=y
 CONFIG_MODVERSIONS=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_EFI_PARTITION=y
-# CONFIG_IOSCHED_TEST is not set
-CONFIG_DEFAULT_NOOP=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_CGROUP_BFQIO=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8974=y
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
@@ -103,6 +99,7 @@ CONFIG_ENABLE_VMALLOC_SAVING=y
 CONFIG_CC_STACKPROTECTOR=y
 CONFIG_USE_OF=y
 CONFIG_CPU_FREQ=y
+CONFIG_CPU_FREQ_GOV_ABYSSPLUG=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -130,16 +127,19 @@ CONFIG_CPU_FREQ_GOV_UBERDEMAND=y
 CONFIG_CPU_FREQ_GOV_OPTIMAX=y
 CONFIG_CPU_BOOST=y
 CONFIG_POWERSUSPEND=y
-CONFIG_FB_MSM_MDSS=y
-CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_DYNAMIC_FSYNC=y
 CONFIG_TOUCHBOOST_CONTROL=y
+CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
+CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_KSM=y
+CONFIG_UKSM=y
+CONFIG_HAS_MACH_MEMUTILS=y
+CONFIG_ALUCARD_HOTPLUG=y
 
 #
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=y
+# CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
@@ -149,7 +149,6 @@ CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_FIFO=y
-CONFIG_IOSCHED_TRIPNDROID=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_NOOP is not set
@@ -159,13 +158,13 @@ CONFIG_IOSCHED_TRIPNDROID=y
 # CONFIG_DEFAULT_VR is not set
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_FIFO is not set
-# CONFIG_DEFAULT_CFQ is not set
-CONFIG_DEFAULT_TRIPNDROID=y
-CONFIG_DEFAULT_IOSCHED="tripndroid"
+CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_IOSCHED="cfq"
 
 #Enable CPUFREQ LIMIT.
 CONFIG_CPU_FREQ_LIMIT=y
 CONFIG_CPU_FREQ_LIMIT_USERSPACE=y
+CONFIG_UID_CPUTIME=y
 
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
@@ -195,6 +194,23 @@ CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_XFRM_MODE_BEET=y
 # CONFIG_INET_LRO is not set
+# TCP Congestion
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_RENO=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
+
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -229,9 +245,9 @@ CONFIG_NETFILTER_TPROXY=y
 CONFIG_NETFILTER_XTABLES=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
-CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_LOG=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
+CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
@@ -309,13 +325,13 @@ CONFIG_RFKILL=y
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_CMA=y
+CONFIG_CMA_PINPAGE_MIGRATION=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_QSEECOM=y
 CONFIG_QPNP_MISC=y
 CONFIG_USB_HSIC_SMSC_HUB=y
 CONFIG_TI_DRV2667=y
-CONFIG_UID_CPUTIME=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
@@ -422,9 +438,12 @@ CONFIG_MSM_KGSL=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 CONFIG_FB=y
 CONFIG_FB_MSM=y
+CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_FB_MSM_BACKLIGHT is not set
-CONFIG_ADRENO_IDLER=y 
+CONFIG_ADRENO_IDLER=y
+CONFIG_PVS_LEVEL_INTERFACE=y 
 CONFIG_FB_MSM_MDSS=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_PM_DEVFREQ=y
 CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
@@ -534,12 +553,14 @@ CONFIG_USB_STORAGE_ENE_UB6250=y
 CONFIG_USB_EHSET_TEST_FIXTURE=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG_FILES=y
+# Advanced Linux Sound Architecture
+CONFIG_SND_RAWMIDI=y
 CONFIG_USB_DWC3_MSM=y
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
 CONFIG_USB_ANDROID_SAMSUNG_SIDESYNC=y
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
-# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
+CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 CONFIG_USB_DUN_SUPPORT=y
 CONFIG_MMC=y
 CONFIG_MMC_PERF_PROFILING=y
@@ -570,7 +591,7 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
-# CONFIG_ANDROID_LOGGER is not set
+CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -596,16 +617,13 @@ CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT3_FS=y
 # CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT4_FS=y
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
-CONFIG_F2FS_FS_XATTR=y
-CONFIG_F2FS_FS_POSIX_ACL=y
-CONFIG_F2FS_FS_SECURITY=y
-# CONFIG_F2FS_CHECK_FS is not set
 CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_SDCARD_FS=y
 CONFIG_EXFAT_FS=y
+CONFIG_SCFS=y
+CONFIG_SCFS_LOWER_PAGECACHE_INVALIDATION=y
+CONFIG_CRYPTO_LZO=y
 CONFIG_TMPFS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
@@ -618,7 +636,7 @@ CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_MEMORY_INIT=y
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_DYNAMIC_DEBUG is not set
 CONFIG_DEBUG_USER=y
 CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_DEBUG_SET_MODULE_RONX=y
@@ -674,10 +692,10 @@ CONFIG_SEC_LOGGER_BUFFER_EXPANSION=y
 CONFIG_SEC_SSR_DEBUG_LEVEL_CHK=y
 CONFIG_SEC_THERMISTOR=y
 
-# CONFIG_SEC_RESTRICT_ROOTING is not set
-# CONFIG_SEC_RESTRICT_SETUID is not set
-# CONFIG_SEC_RESTRICT_FORK is not set
-# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
+CONFIG_SEC_RESTRICT_ROOTING=y
+CONFIG_SEC_RESTRICT_SETUID=y
+CONFIG_SEC_RESTRICT_FORK=y
+CONFIG_SEC_RESTRICT_ROOTING_LOG=y
 
 CONFIG_UID_STAT=y
 CONFIG_DEBUG_FS=y
@@ -688,21 +706,26 @@ CONFIG_MSM_AVTIMER=y
 
 CONFIG_ENABLE_DEFAULT_TRACERS=y
 
-CONFIG_SEC_NET_FILTER=y
 CONFIG_OF_SUBCMDLINE_PARSE=y
 CONFIG_USER_RESET_DEBUG=y
 CONFIG_MIN_DIRTY_THRESH_PAGES=2560
 CONFIG_CRYPTO_GCM=y
 
-CONFIG_MUIC_SUPPORT_RUSTPROOF=y
-
+# KNOX SDP and DLP
 CONFIG_SDP=y
+CONFIG_DLP=y
+
+# SDCARD FS XATTR
+CONFIG_SDCARD_FS_XATTR=y
+CONFIG_ECRYPT_FS_VIRTUAL_FAT_XATTR=y
+CONFIG_FAT_VIRTUAL_XATTR=y
+CONFIG_EXFAT_VIRTUAL_XATTR=y
+CONFIG_FAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
+CONFIG_SEC_SELINUX=y
 
 #smart mgr kernel features
 CONFIG_SEC_SLOWPATH=y
 CONFIG_SEC_SMART_MGR_RUNQUEUE_AVG=y
 
-# CONFIG_V4L_USB_DRIVERS is not set
-# CONFIG_MSM_DMA_TEST is not set
-# CONFIG_MSM_ULTRASOUND_B is not set
-# CONFIG_MEDIA_TUNER is not set
+#TZ ICCC defines
+CONFIG_TZ_ICCC=y
